<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.makerz.ForgotPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="70dp"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_forgot"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:textSize="30dp"
        android:textColor="#FDFDFD"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:text="@string/text1"
        android:textColor="#FDFDFD"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/text2"
        android:textColor="#FDFDFD"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/reemail"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:textColor="#FDFDFD"
        android:textColorHint="#FDFDFD"
        android:backgroundTint="#FDFDFD"
        android:drawableLeft="@drawable/email"
        android:hint="@string/heriot_watt_email_address"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/confirm"
        android:background="#4E4848"
        android:textColor="#FDFDFD"
        />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/back"
        android:background="@drawable/black_white_bg_bordered_button"
        android:textColor="#FDFDFD"
        />

</LinearLayout>




