<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.makerz.MainActivity"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="70dp"
        />

    <EditText
        android:id="@+id/codename"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="9dp"
        android:textColor="#FDFDFD"
        android:textColorHint="#FDFDFD"
        android:backgroundTint="#FDFDFD"
        android:drawableLeft="@drawable/username"
        android:hint="@string/email"

        />


    <EditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="9dp"
        android:textColor="#FDFDFD"
        android:textColorHint="#FDFDFD"
        android:backgroundTint="#FDFDFD"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/password"
        />


    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="9dp"
        android:text="@string/btn_login"
        android:background="#4E4848"
        android:textColor="#FDFDFD"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/not_registered"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="#FDFDFD"
            />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="#FDFDFD"
            />



    </LinearLayout>

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingLeft="27dp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:layout_marginRight="1dp"
        android:textColor="#FDFDFD"
        />

    <TextView
        android:id="@+id/info"
        android:layout_width="220dp"
        android:layout_height="19dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/nothing"
        android:textColor="#FDFDFD" />

</LinearLayout>