<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.makerz.ChangePasswordActivity">


    <TextView
        android:layout_width="500dp"
        android:layout_height="20dp"
        android:background="@drawable/line_border"
        android:textColor="#FDFDFD"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FDFDFD"
        android:text="@string/change_password"
        android:textColor="#FDFDFD"
        android:textColorHint="#FDFDFD"
        android:textSize="28dp" />

    <TextView
        android:layout_width="500dp"
        android:layout_height="20dp"
        android:background="@drawable/line_border_top"
        android:textColor="#FDFDFD"/>

    <EditText

        android:inputType="textPassword"
        android:id="@+id/edittext_password_old"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/lock"
        android:layout_marginLeft="-10dp"
        android:hint="@string/password_old"
        android:textColor="#FDFDFD"
        android:textColorHint="#FDFDFD"
        android:backgroundTint="#FDFDFD"
        android:textSize="20sp"/>

    <EditText

        android:inputType="textPassword"
        android:id="@+id/edittext_password_1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/lock"
        android:layout_marginLeft="-10dp"
        android:hint="@string/password"
        android:textColor="#FDFDFD"
        android:textColorHint="#FDFDFD"
        android:backgroundTint="#FDFDFD"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edittext_re_password_1"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FDFDFD"
        android:drawableLeft="@drawable/lock"
        android:layout_marginLeft="-10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#FDFDFD"
        android:textColorHint="#FDFDFD"
        android:textSize="20sp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-10dp"
        android:layout_marginStart="15dp"
        android:text="@string/password_must_be_at_least_6_characters"
        android:textColor="#FDFDFD"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button_change_password_1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/black_white_bg_bordered_button"
        android:text="@string/update"
        android:textColor="#FDFDFD" />


    <Button
        android:id="@+id/button_backz_1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="9dp"
        android:text="@string/backz"
        android:background="#4E4848"
        android:textColor="#FDFDFD"
        />

</LinearLayout>
